--- a/autoencoders/Snakefile
+++ b/autoencoders/Snakefile
@@ -115,7 +115,7 @@ rule kd_ae_l1_train:
         distillation_loss = 'mae',
         node_size = 32,
         n_features = 3,
-        batch_size = 1024,
+        batch_size = 2048,
         n_epochs = 100,
         plots = 'plots/ae_l1/',
         shuffle_strategy = 'none',
@@ -174,10 +174,11 @@ rule tune_student_kd_ae_l1:
         data = rules.reformat_ae_l1_data.output.train_loss
     params:
         distillation_loss = 'mae',
+        model_to_quant = 'output/Noquantsearchhp3000_6000.json',
     output:
     shell:
         'python tune_student_hyperparameters.py --input-file {input.data} \
-                                        --distillation-loss {params.distillation_loss} '
+                                        --distillation-loss {params.distillation_loss}'
 
 rule kd_graph_train:
     input:
@@ -320,3 +321,71 @@ rule co_train_latent_plot:
                                 --teacher-loss-name {params.loss_name} \
                                 --output-dir {params.plots} \
                                 --signal {input.signal}'
+                                
+rule tuning_analysis_with_train:
+    input:
+        train = rules.reformat_ae_l1_data.output.train_loss,
+        test = rules.reformat_ae_l1_data.output.test_loss,
+        val = rules.reformat_ae_l1_data.output.val_loss,
+        signal = rules.reformat_ae_l1_data.output.signal_loss
+    params:
+        list_models = 'output/hpdumppostsearch2_tot.json',
+        data_name = 'data',
+        loss_name = 'teacher_loss',
+        distillation_loss = 'mae',
+        n_features = 3,
+        batch_size = 4096,
+        n_epochs = 10,
+        n_models = 50, 
+        plots = 'output/tuning-analysis-plotspostsearch/',
+        shuffle_strategy = 'none',
+        shuffle_during = 'never'
+    shell:
+        'mkdir -p {params.plots};'
+        'python tuning_analysis.py --list-models {params.list_models} \
+                                          --input-train-file {input.train} \
+                                          --input-test-file {input.test} \
+                                          --input-val-file {input.val} \
+                                          --input-signal-file {input.signal} \
+                                          --data-name {params.data_name} \
+                                          --n-features {params.n_features} \
+                                          --teacher-loss_name {params.loss_name} \
+                                          --batch-size {params.batch_size} \
+                                          --n-epochs {params.n_epochs} \
+                                          --distillation-loss {params.distillation_loss} \
+                                          --n-models {params.n_models} \
+                                          --output-dir {params.plots} '
+                                          
+rule single_model_test:
+    input:
+        train = rules.reformat_ae_l1_data.output.train_loss,
+        test = rules.reformat_ae_l1_data.output.test_loss,
+        val = rules.reformat_ae_l1_data.output.val_loss,
+        signal = rules.reformat_ae_l1_data.output.signal_loss
+    params:
+        data_name = 'data',
+        loss_name = 'teacher_loss',
+        distillation_loss = 'mae',
+        n_features = 3,
+    shell:
+        'python single_student.py --input-train-file {input.train} \
+                                          --input-test-file {input.test} \
+                                          --input-val-file {input.val} \
+                                          --input-signal-file {input.signal} \
+                                          --data-name {params.data_name} \
+                                          --n-features {params.n_features} \
+                                          --teacher-loss_name {params.loss_name} \
+                                          --distillation-loss {params.distillation_loss} '
+
+rule co_train_search:
+    input:
+        data = config['dataset'],
+    params:
+        dir = 'cotrainsearch/'
+    shell:
+        'mkdir -p cotrainsearch;'
+        'python co_train_param_search.py --data-file {input.data} \
+                            --output-dir {params.dir}'
+
+
+
