--- a/autoencoders/Snakefile
+++ b/autoencoders/Snakefile
@@ -58,7 +58,7 @@ rule check_big_teacher_performance:
 
 rule reformat_ae_l1_data:
     input:
-        data = expand(config['dataset'], events=-1),
+        data = '/content/drive/MyDrive/data_-1.pickle',
         teacher_h5 = rules.tune_teacher_kd_ae_l1.output
     output:
         train_loss = 'output/l1_ae_train_loss.h5',
