--- a/autoencoders/config.yaml
+++ b/autoencoders/config.yaml
@@ -1,13 +1,14 @@
 # Path to the local samples
-background: '/eos/project/d/dshep/TOPCLASS/L1jetLepData/cocktail_0.66invfb_fixed.h5'
-leptoquarks: '/eos/project/d/dshep/TOPCLASS/L1jetLepData/leptoquark_LOWMASS_lepFilter_13TeV/leptoquark_LOWMASS_lepFilter_13TeV.h5'
-ato4l: '/eos/project/d/dshep/TOPCLASS/L1jetLepData/Ato4l_lepFilter_13TeV/Ato4l_lepFilter_13TeV.h5'
-hChToTauNu: '/eos/project/d/dshep/L1anomaly_DELPHES/hChToTauNu_13TeV_PU20.h5'
-hToTauTau: '/eos/project/d/dshep/L1anomaly_DELPHES/hToTauTau_13TeV_PU20.h5'
-monojet: '/eos/user/n/nchernya/MLHEP/AnomalyDetection/autoencoder_for_anomaly/files/AD_event_based/graph_data/validation/sig_fake_monojet_fixed.h5'
+dir: '/eos/home-e/egovorko/'
+background: '../../cernbox/cocktail_0.66invfb_fixed.h5'
+leptoquarks: '../../cernbox/leptoquark_LOWMASS_lepFilter_13TeV_filtered.h5'
+ato4l: '../../cernbox/Ato4l_lepFilter_13TeV_filtered.h5'
+hChToTauNu: '../../cernbox/hChToTauNu_13TeV_PU20_filtered.h5'
+hToTauTau: '../../cernbox/hToTauTau_13TeV_PU20_filtered.h5'
+monojet: '../../cernbox/sig_fake_monojet_fixed.h5'
 
 # Datasets constructed from samples above
-dataset: '/eos/cms/store/cmst3/user/egovorko/kd_output/data_{events}.pickle'
+datasets_dir: '/eos/cms/store/cmst3/user/egovorko/kd_output/'
 
 # Graph results from Nadya
 signal: '/eos/user/n/nchernya/MLHEP/AnomalyDetection/autoencoder_for_anomaly/graph_AD_event_based/run_19/evaluated/signals_evaluated_model21_merged_new.h5'
@@ -19,4 +20,4 @@ json: '/eos/cms/store/cmst3/user/egovorko/paper_output/model-conv_ae-8-b0-q4-pru
 h5: '/eos/cms/store/cmst3/user/egovorko/paper_output/model-conv_ae-8-b0-q4-pruned.h5'
 
 # Big Teacher AE with around 75k parameters
-big_teacher_h5: '/afs/cern.ch/work/e/egovorko/public/big_teacher.h5'
+big_teacher_h5: '../../cernbox/big_teacher.h5'
